
George Hopkins improved the fhkvdataiii driver to infer the current year and
the rtlwmbus driver to propagate the timestamp from rtlwmbus input into the final
json timestamp. Thanks George!

Rob Peters fixed a missing log output for ell_type. Thanks Rob!

Added the GWF water meter.

Zleba improved the qwater driver! Thanks Zleba!

The option --logfile=syslog now works.

ATTENTION! The hydrus driver has been rewritten from scratch! current_date is now meter_datetime
Several fields were printed with value 0 even if the telegram did not contain the actual zero,
such fields are no longer printed. Also the third text field has changed from max_flow_m3h
to total_at_date_m3. Use --selectfields=... if you are affected.

ATTENTION! The microclima driver has been refactored. The field device_date_time has been renamed
to meter_datetime. Also two fields related to tariffs do not occur in the actual telegrams so these
fields have been removed. The fields output has therefore been drastically changed. Use --selectfields=
to reset your setup. Historical data is now decoded and added to the json.

ATTENTION! The qwater driver has been refactored. The field device_date_time has been renamed
to meter_datetime also the due 17 date fields have been renamed. The error_code field has
disappeared since it was broken anyway and replaced with status.

ATTENTION! The sharky774 driver had a bug that triggered when the meter used Joules instead of kWh.
Also the calculated temperature difference had to be removed. You can re-add the temperature difference
by using --calculate_temperature_difference_c=flow_temperature_c-return_temperature_c

Since a field disappeared the default fields were disrupted and a shorter list of fields
have now been picked for the default fields. Please use --selectedfields=... to recreate
your previous fields.

Also the field operating_time_h now prints the proper operating time and
the new field operating_time_in_error_h prints the time when in error.
